guid/istio/istio-virtual-service.yaml
# A VirtualService defines the rules that control how requests for a service are routed within an Istio service mesh
#     CorsPolicy
#     Destination
#     HTTPFaultInjection
#     HTTPMatchRequest
#     HTTPRedirect
#     HTTPRetry
#     HTTPRewrite
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - match:
    - sourceLabels:
        app: reviews
        version: v1
      header:         # and condition
        end-user:
          exact: murali
    - uri:            # or condition
        prefix: /api/v1
    rewrite:
      uri: /app    
    route:
    - destination: 
        host: reviews
        subset: v1
      weight: 75
    - destination:
        host: reviews
        port:
          number: 7777
        subset: v2
      weight: 25
    timeout: 10s
    retries:
      attempt: 3
      perTryTimeout: 2s
    fault:
      delay:
        fixedDelay: 5s 
      abort: 
        percent: 10
        httpStatus: 400
  - route:
    - destination:
        host: reviews
        subset: v3
